knative-operator/deploy/resources/console_cli_download_kn_resources.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  namespace: placeholder
  name: kn-cli-downloads
spec:
  template:
    spec:
      containers:
      - name: kn-download-server
        image: IMAGE_KN_CLI_ARTIFACTS
        resources:
          requests:
            cpu: 10m
            memory: 50Mi
