knative-operator/deploy/resources/ping_source_service_monitor.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: knative-metrics-eventing-ps
  name: knative-metrics-eventing-ps
spec:
  ports:
    - name: http-metrics
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    eventing.knative.dev/source: ping-source-controller
  sessionAffinity: None
  type: ClusterIP
