knative-operator/deploy/resources/eventing_networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: eventing-webhook
  namespace: knative-eventing
  labels:
    app: eventing-webhook
spec:
  podSelector:
    matchLabels:
      app: eventing-webhook
  ingress:
    - {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: knative-eventing-allow-all
  namespace: knative-eventing
spec:
  egress:
    - {}
  ingress:
    - {}
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: v1
kind: Namespace
metadata:
  name: knative-serving-ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: knative-eventing-cluster-local-gateway-hack
  namespace: knative-serving-ingress
spec:
  ingress:
    - from:
        - namespaceSelector: {}
  podSelector:
    matchLabels:
      istio: cluster-local-gateway
  policyTypes:
    - Ingress
